Added IS for critic; notation fixes

--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -2472,7 +2472,8 @@
     "     - Typically done using Generalized Advantage Estimation (GAE):\n",
     "       $$\\delta_t = R_t + \\gamma V(S_{t+1}; \\phi) - V(S_t; \\phi)$$\n",
     "       $$A_t = \\sum_{k=0}^{\\infty} (\\gamma \\lambda)^k \\delta_{t+k}$$\n",
-    "     - Compute the rewards-to-go (returns) $\\hat{R}_t$ for the value function target.\n",
+    "     - Compute the rewards-to-go (estimated action value) for the value function target:\n",
+    "       $$y_t = A_t + V(S_t; \\phi)$$\n",
     "\n",
     "   - **3. Policy Update Step (The Trust Region Update):**\n",
     "     - **Compute Policy Gradient:** Calculate the gradient of the surrogate objective w.r.t. $\\theta$:\n",
@@ -2495,7 +2496,7 @@
     "\n",
     "   - **4. Value Function Update:**\n",
     "     - Update $\\phi$ to minimize the Mean Squared Error between the estimated value and the actual returns $\\hat{R}_t$:\n",
-    "       $$\\phi \\leftarrow \\arg\\min_\\phi \\sum_{t} \\left( V(S_t; \\phi) - \\hat{R}_t \\right)^2$$\n",
+    "       $$\\phi \\leftarrow \\arg\\min_\\phi \\sum_{t} \\left( V(S_t; \\phi) - y_t \\right)^2$$\n",
     "     - (Usually solved via standard Adam/SGD optimizer for multiple epochs).\n",
     "\n",
     "4. **Repeat until convergence.**\n",
@@ -2591,7 +2592,7 @@
     "     - Using Generalized Advantage Estimation (GAE):\n",
     "       - Compute TD errors: $\\delta_t = r_t + \\gamma V_\\phi(s_{t+1}) - V_\\phi(s_t)$\n",
     "       - Compute Advantages: $A_t = \\sum_{k=0}^{T-t-1} (\\gamma \\lambda)^k \\delta_{t+k}$\n",
-    "     - Compute the target Returns for the value function: $\\hat{R}_t = A_t + V_\\phi(s_t)$.\n",
+    "     - Compute the target Returns for the value function (estiamted action value): $y_t = A_t + V_\\phi(s_t)$.\n",
     "     - (Optional) Normalize advantages $A_t$ (mean 0, std 1) for training stability.\n",
     "\n",
     "   - **3. Policy & Value Update (Multi-Epoch Optimization):**\n",
@@ -2616,7 +2617,7 @@
     "             - Optimizer Step: Update $\\theta$ using the Actor's optimizer.\n",
     "\n",
     "           - **Update Critic (Value Network):**\n",
-    "             - Compute Critic Loss: $L^{Critic}(\\phi) = \\frac{1}{|B|} \\sum_{i \\in B} (V_\\phi(s_i) - \\hat{R}_i)^2$\n",
+    "             - Compute Critic Loss: $L^{Critic}(\\phi) = \\frac{1}{|B|} \\sum_{i \\in B} (V_\\phi(s_i) - y_i)^2$\n",
     "             - Backpropagate: Compute gradients $\\nabla_\\phi L^{Critic}$.\n",
     "             - Optimizer Step: Update $\\phi$ using the Critic's optimizer.\n",
     "\n",
@@ -2690,6 +2691,8 @@
     "\n",
     "    The target for the Value Network then becomes:\n",
     "    $$y_t = A_t^{GAE} + V_\\phi(s_t)$$\n",
+    "    \n",
+    "    The target $y_t$ is an estimation for the action-value $q_t(s, a)$.\n",
     "\n",
     "3. **Critic Update**\n",
     "\n",
@@ -2721,7 +2724,40 @@
     "\n",
     "$$\\nabla_\\theta L_{total} = \\hat{\\mathbb{E}}_t \\left[ -\\nabla_\\theta L^{CLIP}_t + 2 c_1 \\left( V_\\theta(s_t) - y_t \\right) \\nabla_\\theta V_\\theta(s_t) \\right]$$\n",
     "\n",
-    "$$\\theta \\leftarrow \\theta - \\alpha \\nabla_\\theta L_{total}$$"
+    "$$\\theta \\leftarrow \\theta - \\alpha \\nabla_\\theta L_{total}$$\n",
+    "\n",
+    "### Importance Sampling in Value Network Training\n",
+    "In theory, when training the value network, we should reweight the value estimate given by $pi_old$ to pi when calculating the advantage. So, the value network estiamte the value of the newest policy, where\n",
+    "\n",
+    "formula here\n",
+    "\n",
+    "While this is theortically more correct, in practice, we do not implement this because\n",
+    "1. Requries extra computation\n",
+    "2. The \"Long Tail\" of Ratios may cause high varaince in the update.\n",
+    "3. Good enough estiamte, since TRPO/PPO keeps the two policy close, we can safely assume the value estiamtes under $pi_old$ is good enough for pi\n",
+    "\n",
+    "### Importance Sampling in Value Network Training\n",
+    "\n",
+    "In Actor-Critic algorithms like PPO, the Value Network (Critic) is tasked with estimating $V^{\\pi_\\theta}(s)$, the value function of the *current* policy. However, the training data (states, actions, and rewards) is collected by an *old* behavior policy $\\pi_{\\text{old}}$. Ideally, to account for the distribution shift between the data-collecting policy ($\\pi_{\\text{old}}$) and the target policy ($\\pi_\\theta$), we should apply **Importance Sampling (IS)** to the value estimation, so the theoretically corrected update target ($y_t^{IS}$) would resemble:\n",
+    "\n",
+    "$$\n",
+    "y_t^{IS} = V(s_t) +  \\left( \\rho_t (r_t + \\gamma V(s_{t+1})) - V(s_t) \\right) = \\rho_t (r_t + \\gamma V(s_{t+1}))\n",
+    "$$\n",
+    "\n",
+    "* $\\rho_t = \\frac{\\pi_\\theta(a_t|s_t)}{\\pi_{\\text{old}}(a_t|s_t)}$ is the importance sampling ratio.\n",
+    "\n",
+    "Despite the theoretical justification, standard implementations of PPO and TRPO **do not** use Importance Sampling for the Value Network. The Critic is simply trained to minimize the Mean Squared Error (MSE) against the unweighted returns from the buffer: $L = (V_\\phi(s) - y_t^{IS})^2$.\n",
+    "\n",
+    "There are three primary reasons for this simplification:\n",
+    "\n",
+    "1. **Computational Complexity vs. Gain**: Implementing correct off-policy targets requires recursive calculation over the trajectory and careful handling of the products of ratios. The marginal performance gain in On-Policy methods rarely justifies the added code complexity and computational overhead.\n",
+    "\n",
+    "2. **The \"Long Tail\" of Ratios (Variance Explosion)**: Importance Sampling ratios $\\rho_t$ are unbounded. If the old policy took an action that was rare ($\\pi_{\\text{old}} \\approx 10^{-4}$) but the new policy likes it ($\\pi_{\\theta} \\approx 10^{-2}$), the ratio becomes huge ($\\rho = 100$). Since the Critic optimizes a **Squared Error** loss, multiplying the error by a large factor $\\rho_t$ (or scaling the target by it) causes the gradient to explode. This leads to severe instability where the Value Network overfits to outliers rather than learning the general value landscape.\n",
+    "\n",
+    "3. **The \"Good Enough\" Assumption (Trust Region)**: The core mechanic of PPO/TRPO is the Trust Region constraint (via Clipping or KL Divergence), which forces the new policy to remain statistically close to the old policy:\n",
+    "$$\\pi_\\theta \\approx \\pi_{\\text{old}} \\implies \\rho_t \\approx 1$$\n",
+    "\n",
+    "    Because the policies are constrained to be similar, the Value Function of the old policy is a highly accurate proxy for the Value Function of the new policy ($V^{\\pi_{\\text{old}}} \\approx V^{\\pi_\\theta}$). Therefore, training the Critic on the \"stale\" returns from $\\pi_{\\text{old}}$ introduces a bias that is negligible in practice compared to the variance introduced by Importance Sampling."
    ]
   },
   {
