--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -2762,6 +2762,157 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7a70877b",
+   "metadata": {},
+   "source": [
+    "# Deterministic Policy Gradient (DPG) Methods\n",
+    "In many RL scenarios, specifically Continuous Control, we may prefer learning a deterministic policy $\\mu(s)$ rather than a stochastic policy $\\pi(a|s)$. A deterministic policy maps a state directly to a specific action, ensuring the best action is taken without randomness during inference.\n",
+    "\n",
+    "Standard stochastic policies (e.g., Gaussian policies) face two primary limitations:\n",
+    "1.  **Boundary Constraints:** Stochastic distributions (like the Gaussian) typically have infinite support $(-\\infty, \\infty)$. Sampling from the tails may result in actions that exceed physical limitations (e.g., voltage or torque limits). Clipping these actions introduces bias into the gradient estimation.\n",
+    "2.  **Risk of Bad Exploration:** Even with low probability, a stochastic policy might sample a catastrophic action (e.g., a robot driving off a cliff). In safety-critical environments, this inherent randomness is undesirable.\n",
+    "\n",
+    "While standard Policy Gradient methods (like REINFORCE or PPO) learn a stochastic policy, deterministic policies can be viewed as a special limiting case (where the variance $\\sigma \\to 0$).\n",
+    "\n",
+    "### Extracting a Policy from a Learned Stochastic Model\n",
+    "If we have already learned a stochastic policy $\\pi(a|s)$, we can mathematically extract a deterministic approximation:\n",
+    "1.  **Discrete Action Space:** Select the action with the highest probability mass.\n",
+    "    $$\\mu(s) = \\underset{a}{\\mathrm{argmax}} \\; \\pi(a|s)$$\n",
+    "2.  **Continuous Action Space:** Use the expected value (mean) of the distribution. For a Gaussian policy $\\pi \\sim \\mathcal{N}(\\mu_\\theta(s), \\sigma)$, the deterministic action is simply the mean:\n",
+    "    $$\\mu(s) = \\mathbb{E}[a \\sim \\pi(\\cdot|s)]$$\n",
+    "\n",
+    "### Learning a Deterministic Policy Directly\n",
+    "Instead of learning a distribution and then collapsing it, we can train a function approximator $\\mu_\\theta(s)$ to output the optimal action directly.\n",
+    "\n",
+    "**Advantages compares to learning a stochastic policy:**\n",
+    "1.  **High Sample Efficiency (Off-Policy):** Deterministic policies are compatible with Replay Buffers. Because the policy is not probabilistic, we do not need complex Importance Sampling weights to reuse past experiences (as seen in algorithms like DDPG).\n",
+    "2.  **Simpler Gradient Computation:** Avoids the expensive integral over the action space required by the Stochastic Policy Gradient theorem.\n",
+    "3.  **Faster Convergence:** Gradients are driven directly by the gradient of the Q-function ($\\nabla_a Q$), providing a stronger learning signal than the scalar reward signal used in stochastic methods.\n",
+    "\n",
+    "**Challenges:**\n",
+    "1.  **Limited Exploration:** A deterministic policy will always take the same action in the same state. It cannot explore naturally. We must manually inject noise during training to ensure sufficient exploration.\n",
+    "2.  **High Sensitivity/Variance in Gradients:** Since the policy update relies entirely on the Q-function gradient ($\\nabla_a Q$), it is highly susceptible to errors or variance in the Critic's estimation.\n",
+    "3.  **Instability (Moving Targets & Correlation):** Similar to Deep Q-Networks (DQN), training a deterministic actor-critic on correlated sequential data with shifting target values causes instability. Solutions adapted from DQN, like Replay Buffers and Target Networks, are required to stabilize training.\n",
+    "\n",
+    "\n",
+    "## The Actor-Critic Architecture for DPG\n",
+    "The Actor is a neural network $\\mu_\\theta(s)$ parameterized by $\\theta$.\n",
+    "* **Input:** State $s$.\n",
+    "* **Output:** A single continuous action vector $a$.\n",
+    "* **Assumption:** We assume the network outputs the optimal action that maximizes the value function at the given state:\n",
+    "    $$\\mu(s) \\approx \\underset{a}{\\mathrm{argmax}} \\; Q(s, a)$$\n",
+    "\n",
+    "### The Critic (Q-Network)\n",
+    "The Critic is a neural network $Q_\\phi(s, a)$ parameterized by $\\phi$.\n",
+    "* **Input:** State-Action pair $(s, a)$.\n",
+    "* **Output:** Scalar Q-value (expected return).\n",
+    "* **Role:** It evaluates the action produced by the Actor. If the Actor is optimal, the Critic should predict the maximum possible Q-value for that state, meaning the selected action by the policy is the best action (highest action value):\n",
+    "    $$Q(s, \\mu(s)) \\approx \\underset{a}{\\max} \\; Q(s, a)$$\n",
+    "\n",
+    "\n",
+    "### Policy Network (Actor) Update\n",
+    "The objective is to maximize the expected return of the deterministic policy. The performance objective $J(\\theta)$ is:\n",
+    "$$J(\\theta) = \\mathbb{E}_{s} [ Q_\\phi(s, \\mu_\\theta(s)) ]$$\n",
+    "\n",
+    "To update the Actor, we perform gradient ascent. We want to adjust $\\theta$ such that the output action $\\mu_\\theta(s)$ moves in the direction that increases $Q$.\n",
+    "$$\\theta^* = \\underset{\\theta}{\\mathrm{argmax}} \\; \\mathbb{E}[Q_\\phi(s, \\mu_\\theta(s))]$$\n",
+    "\n",
+    "**The Deterministic Policy Gradient (DPG):**\n",
+    "By applying the chain rule, the gradient depends on the gradient of the Q-value with respect to the action, and the gradient of the action with respect to the policy parameters:\n",
+    "$$\\nabla_\\theta J(\\theta) \\approx \\mathbb{E}_{s} \\left[ \\nabla_a Q_\\phi(s, a)|_{a=\\mu_\\theta(s)} \\cdot \\nabla_\\theta \\mu_\\theta(s) \\right]$$\n",
+    "\n",
+    "* **Encoder-Decoder Analogy:** This architecture resembles an encoder-decoder.\n",
+    "    * **Encoder:** The Actor maps state $s \\to$ action $a$.\n",
+    "    * **Decoder:** The Critic maps $(s, a) \\to$ value $Q$.\n",
+    "    * **Backpropagation:** We need to backpropagate throught the critic in order to update the Actor network $\\mu$, but we do not update the critic's parameters here.\n",
+    "\n",
+    "### Q-Network (Critic) Update\n",
+    "The Critic is trained to minimize the prediction error (Bellman error). We use **TD Bootstrapping** to calculate the target value.\n",
+    "\n",
+    "**Target Q-Value ($y_t$):**\n",
+    "$$y_t = R_{t+1} + \\gamma Q_\\phi(s_{t+1}, \\mu(s_{t+1}))$$\n",
+    "\n",
+    "**Critic Loss Function:**\n",
+    "We minimize the Mean Squared Error (MSE) between the predicted Q-value and the target:\n",
+    "$$L(\\phi) = \\frac{1}{T} \\sum_{t=0}^{T-1} \\left( y_t - Q_\\phi(s_t, a_t) \\right)^2$$\n",
+    "\n",
+    "**Critic Gradient:**\n",
+    "$$\\nabla_\\phi L(\\phi) = \\frac{1}{T} \\sum_{t=0}^{T-1} \\left( y_t - Q_\\phi(s_t, a_t) \\right) \\nabla_\\phi Q_\\phi(s_t, a_t)$$\n",
+    "\n",
+    "This method is computationally simpler than Trust Region methods (TRPO/PPO) because it relies on standard backpropagation through the Q-function rather than complex probability ratio constraints or second-order optimizations.\n",
+    "\n",
+    "## DPG Algorithm\n",
+    "### Vanilla Deterministic Policy Gradient (DPG) Algorithm\n",
+    "\n",
+    "1. **Given:**\n",
+    "   - **Hyperparameters:**\n",
+    "     - Discount factor $\\gamma \\in [0, 1]$\n",
+    "     - Learning rates $\\alpha_\\mu$ (Actor) and $\\alpha_Q$ (Critic)\n",
+    "   - **Models:**\n",
+    "     - A parameterized deterministic policy $\\mu_\\theta(s)$ (Actor)\n",
+    "     - A parameterized action-value function $Q_\\phi(s, a)$ (Critic)\n",
+    "\n",
+    "2. **Initialize:**\n",
+    "   - Initialize policy weights $\\theta$ and Q-function weights $\\phi$ arbitrarily.\n",
+    "   - Initialize the optimizer(s) for parameters $\\{\\theta, \\phi\\}$.\n",
+    "\n",
+    "3. **Repeat (for each episode):**\n",
+    "\n",
+    "   - **1. Initialize State:**\n",
+    "     - Receive initial observation state $s_1$.\n",
+    "\n",
+    "   - **2. Episode Loop (for $t = 1, \\dots, T$):**\n",
+    "   \n",
+    "     - **a. Action Selection:**\n",
+    "       - Select action according to the current policy (behavior policy $\\beta$):\n",
+    "         $$a_t = \\mu_\\theta(s_t)$$\n",
+    "       - Execute action $a_t$ in the environment.\n",
+    "       - Observe reward $r_t$ and new state $s_{t+1}$.\n",
+    "\n",
+    "     - **b. Critic Update (TD Learning):**\n",
+    "       - Compute the TD Target (using the current policy and critic directly, no target nets):\n",
+    "         $$y_t = r_t + \\gamma Q_\\phi(s_{t+1}, \\mu_\\theta(s_{t+1}))$$\n",
+    "       - Compute Critic Loss (Mean Squared Bellman Error):\n",
+    "         $$L^{Critic}(\\phi) = (y_t - Q_\\phi(s_t, a_t))^2$$\n",
+    "       - Backpropagate: Compute gradients $\\nabla_\\phi L^{Critic}$.\n",
+    "       - Optimizer Step: Update $\\phi$ using the Critic's optimizer to minimize the loss.\n",
+    "\n",
+    "     - **c. Actor Update (Deterministic Policy Gradient):**\n",
+    "       - Compute the gradient of the Q-value with respect to the action:\n",
+    "         $$\\nabla_a Q_\\phi(s_t, a)|_{a=\\mu_\\theta(s_t)}$$\n",
+    "       - Compute the gradient of the policy with respect to the parameters:\n",
+    "         $$\\nabla_\\theta \\mu_\\theta(s_t)$$\n",
+    "       - Combine via Chain Rule to get the Actor Gradient:\n",
+    "         $$\\nabla_\\theta J(\\theta) \\approx \\nabla_a Q_\\phi(s_t, a)|_{a=\\mu_\\theta(s_t)} \\cdot \\nabla_\\theta \\mu_\\theta(s_t)$$\n",
+    "       - Optimizer Step: Update $\\theta$ using the Actor's optimizer (gradient ascent).\n",
+    "\n",
+    "     - **d. Transition:**\n",
+    "       - Update state $s_t \\leftarrow s_{t+1}$.\n",
+    "\n",
+    "4. **Repeat until convergence.**\n",
+    "\n",
+    "\n",
+    "## Issues with Vanilla DPG\n",
+    "1. Lack of exploration\n",
+    "2. High-variance gradient estimators\n",
+    "3. Variation of training labels (moving targets)\n",
+    "\n",
+    "### Lack of exploration\n",
+    "Since the current policy select the greedy actions it will likely to quickly stick us to a bad locally-optimal deterministic policy. We can solve this by adding an exploration term through episode-greedy methods\n",
+    "\n",
+    "For continuous action space, we add a noise term to the action sampled from a gaussian distribution\n",
+    "formula\n",
+    "This ensures the agent has sufficent exploration in the environment\n",
+    "\n",
+    "If the sampled noise makes the action exceed the desirable range, we can simply apply a clipping function\n",
+    "formula\n",
+    "\n",
+    "### High variance gradient\n",
+    "Since the vanilla version makes one update per step, the variance of the action value estiamte will be very large. We can address this by using an reply buffer to store the past trajectories and training examples. Unlike normal policy gradient approaches, this is allowed since DPG is an Off-Policy algorithm.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "73d28fae",
    "metadata": {},
    "source": [
