--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -2784,15 +2784,15 @@
     "### Learning a Deterministic Policy Directly\n",
     "Instead of learning a distribution and then collapsing it, we can train a function approximator $\\mu_\\theta(s)$ to output the optimal action directly.\n",
     "\n",
-    "**Advantages compares to learning a stochastic policy:**\n",
-    "1.  **High Sample Efficiency (Off-Policy):** Deterministic policies are compatible with Replay Buffers. Because the policy is not probabilistic, we do not need complex Importance Sampling weights to reuse past experiences (as seen in algorithms like DDPG).\n",
+    "**Advantages compares to learning a stochastic policy then extract:**\n",
+    "1.  **High Sample Efficiency (Off-Policy):** Deterministic policies are compatible with Replay Buffers. Because the policy is not probabilistic, we do not need complex Importance Sampling weights to reuse past experiences.\n",
     "2.  **Simpler Gradient Computation:** Avoids the expensive integral over the action space required by the Stochastic Policy Gradient theorem.\n",
     "3.  **Faster Convergence:** Gradients are driven directly by the gradient of the Q-function ($\\nabla_a Q$), providing a stronger learning signal than the scalar reward signal used in stochastic methods.\n",
     "\n",
     "**Challenges:**\n",
     "1.  **Limited Exploration:** A deterministic policy will always take the same action in the same state. It cannot explore naturally. We must manually inject noise during training to ensure sufficient exploration.\n",
     "2.  **High Sensitivity/Variance in Gradients:** Since the policy update relies entirely on the Q-function gradient ($\\nabla_a Q$), it is highly susceptible to errors or variance in the Critic's estimation.\n",
-    "3.  **Instability (Moving Targets & Correlation):** Similar to Deep Q-Networks (DQN), training a deterministic actor-critic on correlated sequential data with shifting target values causes instability. Solutions adapted from DQN, like Replay Buffers and Target Networks, are required to stabilize training.\n",
+    "3.  **Instability (Moving Targets & Correlation):** Similar to DQN, training a deterministic actor-critic on correlated sequential data with shifting target values causes instability. Solutions adapted from DQN, like Replay Buffers and Target Networks, are required to stabilize training.\n",
     "\n",
     "\n",
     "## The Actor-Critic Architecture for DPG\n",
@@ -2841,8 +2841,7 @@
     "\n",
     "This method is computationally simpler than Trust Region methods (TRPO/PPO) because it relies on standard backpropagation through the Q-function rather than complex probability ratio constraints or second-order optimizations.\n",
     "\n",
-    "## DPG Algorithm\n",
-    "### Vanilla Deterministic Policy Gradient (DPG) Algorithm\n",
+    "## Vanilla Deterministic Policy Gradient (DPG) Algorithm\n",
     "\n",
     "1. **Given:**\n",
     "   - **Hyperparameters:**\n",
@@ -2891,24 +2890,179 @@
     "\n",
     "4. **Repeat until convergence.**\n",
     "\n",
-    "\n",
     "## Issues with Vanilla DPG\n",
-    "1. Lack of exploration\n",
-    "2. High-variance gradient estimators\n",
-    "3. Variation of training labels (moving targets)\n",
+    "The Vanilla DPG algorithm, in its raw form, suffers from instability and convergence problems. These issues parallel those found in DQN, and there are three primary challenges:\n",
+    "1.  **Lack of Exploration**: Deterministic policies do not explore.\n",
+    "2.  **High-Variance Gradient Estimators**: Single-sample updates are noisy.\n",
+    "3.  **Variation of Training Labels**: The moving target problem.\n",
     "\n",
-    "### Lack of exploration\n",
-    "Since the current policy select the greedy actions it will likely to quickly stick us to a bad locally-optimal deterministic policy. We can solve this by adding an exploration term through episode-greedy methods\n",
+    "### Lack of Exploration\n",
+    "A fundamental limitation of a deterministic policy $\\mu_\\theta(s)$ is that it maps a specific state to a specific action deterministically. Unlike stochastic policies which naturally sample around the mean, a deterministic policy will repeat the exact same trajectory given the same starting conditions. It will never discover better actions on its own and will likely converge quickly to a suboptimal local minimum.\n",
     "\n",
-    "For continuous action space, we add a noise term to the action sampled from a gaussian distribution\n",
-    "formula\n",
-    "This ensures the agent has sufficent exploration in the environment\n",
+    "**Solution: Off-Policy Exploration (Noise Injection)**\n",
+    "Since DPG is an off-policy algorithm, we can decouple the *behavior policy* (used to collect data) from the *target policy* (the deterministic policy being learned). We induce exploration by adding stochastic noise to the deterministic action selection process.\n",
     "\n",
-    "If the sampled noise makes the action exceed the desirable range, we can simply apply a clipping function\n",
-    "formula\n",
+    "For continuous action spaces, we typically add noise sampled from a Gaussian distribution to the output of the actor network:\n",
     "\n",
-    "### High variance gradient\n",
-    "Since the vanilla version makes one update per step, the variance of the action value estiamte will be very large. We can address this by using an reply buffer to store the past trajectories and training examples. Unlike normal policy gradient approaches, this is allowed since DPG is an Off-Policy algorithm.\n"
+    "$$a_t = \\mu_\\theta(s_t) + \\mathcal{N}(0, \\sigma^2)$$\n",
+    "\n",
+    "This formulation allows the agent to explore the environment (episode-greedy exploration) while the underlying policy $\\mu_\\theta$ attempts to learn the optimal path.\n",
+    "\n",
+    "**Action Clipping:**\n",
+    "Adding noise may push the action value beyond the valid physical limits of the environment. To maintain validity, we apply a clipping function:\n",
+    "\n",
+    "$$a_t = \\text{clip}(\\mu_\\theta(s_t) + \\mathcal{N}, a_{min}, a_{max})$$\n",
+    "\n",
+    "### High Variance Gradient Estimators\n",
+    "In the vanilla implementation, updates are performed online using single transition samples. This results in noisy gradient estimates that can destabilize training.\n",
+    "\n",
+    "**Solution**: We can stabilize learning by using a **Replay Buffer** $\\mathcal{D}$ to store past transitions $(s_t, a_t, r_t, s_{t+1})$. At every training step, we sample a mini-batch of uncorrelated transitions to compute the gradient.\n",
+    "\n",
+    "Using a replay buffer is only valid because DPG is an **Off-Policy** algorithm, where target policy that it learned is different from the behavior policy.\n",
+    "* **Target Policy:** The deterministic policy $\\mu_\\theta$ (Greedy).\n",
+    "* **Behavior Policy:** The noisy policy $\\mu_\\theta + \\text{Noise}$ (Exploratory).\n",
+    "\n",
+    "**Replay vs. Importance Sampling (IS)**\n",
+    "A key advantage of DPG over stochastic Off-Policy methods is the absence of **Importance Sampling**, meaning there will be no high variance updates coming from importance sampling.\n",
+    "* **Stochastic Policy Gradient:** Requires IS ratios $\\frac{\\pi(a|s)}{\\beta(a|s)}$ to correct for the mismatch between the behavior and target distributions. These ratios often introduce explosive variance (the \"heavy tail\" problem).\n",
+    "* **DPG/Q-Learning:** We rely on the Bellman Optimality Equation. We assume that the critic directly learns to approximate the true $Q^*(s_t, a) \\approx R_{t+1} + \\gamma \\, \\max_{a} Q(S_{t+1}, a)$, which relies on the environment's physics ($r, s'$) and the greedy future action $\\mu(s')$. Because we cut the trajectory dependency after one step bootstrapping, we do not need to reweight the entire trajectory history.\n",
+    "\n",
+    "**Variance Reduction via Batching**\n",
+    "Since there is no importance sampling that contributes to high variance, the only source of variance in DPG is the standard noise from the gradient estimator itself (function approximation error). Since this noise is additive (not multiplicative like IS ratios), we can effectively reduce it by averaging over a batch:\n",
+    "\n",
+    "**Batch Gradient Update Formula:**\n",
+    "The Critic is updated by minimizing the loss over the batch:\n",
+    "$$L(\\phi) = \\frac{1}{N} \\sum_{i=1}^N \\left( y_i - Q_\\phi(s_i, a_i) \\right)^2$$\n",
+    "\n",
+    "The Actor is updated by averaging the policy gradient over the batch:\n",
+    "$$\\nabla_\\theta J \\approx \\frac{1}{N} \\sum_{i=1}^N \\nabla_a Q_\\phi(s_i, a)|_{a=\\mu_\\theta(s_i)} \\nabla_\\theta \\mu_\\theta(s_i)$$\n",
+    "\n",
+    "### Variation of Training Labels (Moving Targets)\n",
+    "In the Bellman update, the target value $y_i$ depends on the same network parameters ($\\theta$ and $\\phi$) that we are trying to update.\n",
+    "\n",
+    "$$y_i = r_i + \\gamma Q_\\phi(s'_{i}, \\mu_\\theta(s'_{i}))$$\n",
+    "\n",
+    "**The Problem:** When we update the parameters $\\phi$ and $\\theta$ to move $Q(s,a)$ closer to $y_i$, the target $y_i$ also shifts (because $Q_\\phi$ and $\\mu_\\theta$ have changed), and it may lead to divergence of network training.\n",
+    "\n",
+    "**Solution**: We address this by the **Target Networks** similar to DQN. The only difference is that instead of only copying the critic, we need to make an copy of both the actor and the critic networks since the target depends on both the policy and the value networks, so we maintain two separate copies:\n",
+    "1.  **Target Actor:** $\\mu'_{\\theta'}$\n",
+    "2.  **Target Critic:** $Q'_{\\phi'}$\n",
+    "\n",
+    "The target value is now computed using these frozen networks:\n",
+    "\n",
+    "$$y_i = r_i + \\gamma Q'_{\\phi'}(s'_{i}, \\mu'_{\\theta'}(s'_{i}))$$\n",
+    "\n",
+    "This ensures that the target $y_i$ remains fixed for a duration of time, providing a stable regression target for the main Q-network.\n",
+    "\n",
+    "**Updating the Targets**: The weights of the target networks ($\\theta', \\phi'$) are updated to match the main networks ($\\theta, \\phi$) periodically, just like in DQN.\n",
+    "\n",
+    "## DDPG Algorithm\n",
+    "\n",
+    "1. **Given:**\n",
+    "   - **Hyperparameters:**\n",
+    "     - Discount factor $\\gamma \\in [0, 1]$\n",
+    "     - Soft update coefficient $\\tau \\ll 1$\n",
+    "     - Minibatch size $N$\n",
+    "     - Learning rates $\\alpha_\\mu$ (Actor) and $\\alpha_Q$ (Critic)\n",
+    "     - Noise process $\\mathcal{N}$ (e.g., Ornstein-Uhlenbeck)\n",
+    "     - The frequency of updating the target networks $H$\n",
+    "   - **Models:**\n",
+    "     - A parameterized deterministic policy $\\mu_\\theta(s)$ (Actor)\n",
+    "     - A parameterized action-value function $Q_\\phi(s, a)$ (Critic)\n",
+    "   - **Target Models:**\n",
+    "     - Target Actor $\\mu'_{\\theta'}(s)$ and Target Critic $Q'_{\\phi'}(s, a)$\n",
+    "   - **Memory:**\n",
+    "     - Experience Replay Buffer $R$\n",
+    "\n",
+    "2. **Initialize:**\n",
+    "   - Initialize policy weights $\\theta$ and Q-function weights $\\phi$ arbitrarily.\n",
+    "   - Initialize target network weights: $\\theta' \\leftarrow \\theta$, $\\phi' \\leftarrow \\phi$.\n",
+    "   - Initialize Replay Buffer $R$.\n",
+    "\n",
+    "3. **Repeat (for each episode):**\n",
+    "\n",
+    "   - **1. Initialize State:**\n",
+    "     - Receive initial observation state $s_1$.\n",
+    "     - Reset the exploration noise process $\\mathcal{N}$.\n",
+    "\n",
+    "   - **2. Episode Loop (for $t = 1, \\dots, T$):**\n",
+    "   \n",
+    "     - **a. Action Selection:**\n",
+    "       - Select action according to the current policy and exploration noise:\n",
+    "         $$a_t = \\mu_\\theta(s_t) + \\mathcal{N}_t$$\n",
+    "       - Execute action $a_t$ in the environment.\n",
+    "       - Observe reward $r_t$ and new state $s_{t+1}$.\n",
+    "       - Store transition $(s_t, a_t, r_t, s_{t+1})$ in Replay Buffer $R$.\n",
+    "\n",
+    "     - **b. Sampling:**\n",
+    "       - Sample a random minibatch of $N$ transitions $(s_i, a_i, r_i, s_{i+1})$ from $R$.\n",
+    "\n",
+    "     - **c. Critic Update:**\n",
+    "       - Compute the target action using the Target Actor:\n",
+    "         $$a'_{i+1} = \\mu'_{\\theta'}(s_{i+1})$$\n",
+    "       - Compute the TD Target (using Target Critic and Target Actor):\n",
+    "         $$y_i = r_i + \\gamma Q'_{\\phi'}(s_{i+1}, a'_{i+1})$$\n",
+    "       - Compute Critic Loss (Mean Squared Bellman Error over the batch):\n",
+    "         $$L^{Critic}(\\phi) = \\frac{1}{N} \\sum_i (y_i - Q_\\phi(s_i, a_i))^2$$\n",
+    "       - Optimizer Step: Update $\\phi$ to minimize the loss.\n",
+    "\n",
+    "     - **d. Actor Update:**\n",
+    "       - Compute the Actor Gradient (mean over the batch):\n",
+    "         $$\\nabla_\\theta J(\\theta) \\approx \\frac{1}{N} \\sum_i \\nabla_a Q_\\phi(s, a)|_{s=s_i, a=\\mu_\\theta(s_i)} \\cdot \\nabla_\\theta \\mu_\\theta(s)|_{s_i}$$\n",
+    "       - Optimizer Step: Update $\\theta$ using the Actor's optimizer (gradient ascent).\n",
+    "\n",
+    "     - **e. Target Network Update:**\n",
+    "       - If after $H$ epochs, update the target networks tothe learned networks:\n",
+    "         $$\\theta' \\leftarrow \\theta$$\n",
+    "         $$\\phi' \\leftarrow \\phi$$\n",
+    "\n",
+    "     - **f. Transition:**\n",
+    "       - Update state $s_t \\leftarrow s_{t+1}$.\n",
+    "\n",
+    "4. **Repeat until convergence.**\n",
+    "\n",
+    "## Overestimation Bias in DDPG\n",
+    "Like the DQN algorithm, DDPG is susceptible to **overestimation bias** in its value function approximation. In standard Q-learning (and DQN), the target value is computed using the **max operator**:\n",
+    "$$y_t = r_t + \\gamma \\max_{a'} Q(s_{t+1}, a')$$\n",
+    "The maximization operator will systematically overestimate the true value. It preferentially selects transitions with positive error (noise spikes) while discarding negative error, shifting the expected value estimate upwards:\n",
+    "$$E[\\max(Q_{est})] \\geq \\max(E[Q_{true}])$$\n",
+    "\n",
+    "DDPG operates in continuous action spaces where an explicit `max` operation is intractable. Instead, it utilizes an Actor network $\\mu_{\\theta}$ that approximates the `argmax`. The DDPG target update is:\n",
+    "$$y_i = r_i + \\gamma Q'_{\\phi'}(s_{i+1}, \\mu'_{\\theta'}(s_{i+1}))$$\n",
+    "\n",
+    "Although this equation lacks an explicit `max` term, the **implicit maximization** remains. The Actor $\\mu$ is trained specifically to output the action that maximizes the Critic's Q-value ($J(\\theta) = E[Q(s, \\mu(s))]$). Therefore:\n",
+    "$$Q(s, \\mu(s)) \\approx \\max_a Q(s, a)$$\n",
+    "Consequently, DDPG inherits the exact same overestimation bias as DQN: the policy will gravitationally drift toward action-values that are inflated by approximation error.\n",
+    "\n",
+    "While DQN and DDPG both suffer from bias, the consequences are significantly more severe in the continuous control setting of DDPG due to the interaction between the Actor and the Critic's gradients.\n",
+    "\n",
+    "1. **Adversarial Exploitation of Local Artifacts**\n",
+    "\n",
+    "In DDPG, the Actor mechanism acts as an optimizer. Because the Actor updates its parameters to maximize $Q$, it will exploit \"sharp peaks\" or artifacts in the value function landscape.\n",
+    "* If the Critic $Q(s, a)$ has a region of high variance (overestimation) due to function approximation error, the Actor will shift the policy $\\mu(s)$ to map directly into this region.\n",
+    "* This creates a feedback loop: The Actor chases the noise in the Critic, and the Critic trains on the suboptimal actions selected by the Actor, reinforcing the false peaks.\n",
+    "\n",
+    "This rarely happens on DQN because although the underlying Q network is continuous, it's very rare that the peak lands exactly on the discrete action points. However, the epsilon-greedy policy will still expliot the high biased action points, causing the error to accumulates.\n",
+    "\n",
+    "2. **The \"Wrong Gradient\" Problem (Shape vs. Rank)**\n",
+    "\n",
+    "The fundamental difference between discrete (DQN) and continuous (DDPG) action spaces lies in how the optimal action is derived:\n",
+    "* **DQN (Rank-based):** In discrete spaces, actions are selected by comparing values. If the Q-function is uniformly biased or distorted, the policy remains optimal as long as the relative ranking (order) of actions is preserved.\n",
+    "\n",
+    "* **DDPG (Gradient-based):** In continuous spaces, there are effectively infinite actions. The algorithm cannot check the rank of every action. Instead, it relies on the **gradient** $\\nabla_a Q(s, a)$ to navigate the action space.\n",
+    "    * **Shape Distortion:** Overestimation bias is rarely uniform; it appears as local noise spikes. These spikes alter the **shape** (curvature) of the value function surface.\n",
+    "    * **Local Optima:** A noise spike creates a steep, false gradient. The Actor, following gradient ascent, will be pulled towards this false peak rather than the true global maximum. \n",
+    "    * Even if the global maximum is theoretically preserved, the **direction** of the update step is corrupted by the local geometry of the noise.\n",
+    "\n",
+    "\n",
+    "### Solution: Double Q-Learning (Clipped Double Q-Learning)\n",
+    "To mitigate this, we can adapt the **Double Q-Learning** principle from DQN to the actor-critic setting. The core idea of Double DQN is to decouple **action selection** from **action evaluation** to prevent the propagation of positive bias. In the context of DDPG (specifically in the **TD3** algorithm), this is implemented using **Clipped Double Q-Learning**:\n",
+    "\n",
+    "1.  **Twin Critics:** Initialize two independent critic networks, $Q_{\\phi_1}$ and $Q_{\\phi_2}$. Both are trained on every step using the shared, pessimistic target. Since they are initialized with different random weights, so they will naturally learn slightly different estimates of the environment.\n",
+    "2.  **Conservative Estimation:** When computing the target, use the standard target actor to select the action $a'$, but use the **minimum** of the two critics to evaluate it:\n",
+    "    $$y_i = r_i + \\gamma \\min_{j=1,2} Q'_{\\phi'_j}(s_{i+1}, a')$$\n",
+    "\n",
+    "By taking the minimum, the algorithm assumes the worst-case scenario between the two estimates. If one critic overestimates a specific action due to noise, the other critic (which likely has different noise) will act as a bound, effectively canceling out the overestimation bias. Since the two Q networks already regulates the bias in the training, the actor is simply trained using $Q_{\\phi_1}$."
    ]
   },
   {
