--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -3067,6 +3067,86 @@
   },
   {
    "cell_type": "markdown",
+   "id": "986e4c51",
+   "metadata": {},
+   "source": [
+    "# Soft Actor-Critic (SAC)\n",
+    "Traditional policy gradient methods either learn a deterministic or stochastic policies, each with distinct advantages and limitations. SAC is designed to combine the strengths of both while mitigating their weaknesses.\n",
+    "\n",
+    "**Deterministic Policies (e.g., DDPG, TD3)**: output a specific, deterministic action $a = \\mu(s)$.\n",
+    "* **Pros:**\n",
+    "    * **High Sample Efficiency:** They are compatible with Replay Buffers due to their off-policy nature. Since they rely on the Bellman equation $Q(s, a)$ rather than probability ratios, they avoid the variance issues associated with Importance Sampling.\n",
+    "    * **Fast Convergence:** The optimization target is sharp and direct.\n",
+    "* **Cons:**\n",
+    "    * **Brittle Exploration:** Exploration is artificial (e.g., adding Gaussian noise manually). The agent does not \"know\" it is exploring.\n",
+    "    * **Suboptimality:** They tend to get stuck in local optima because they commit to a path too early.\n",
+    "\n",
+    "**Stochastic Policies (e.g., REINFORCE, A3C)**: output an action probability distribution $\\pi(a|s)$ to sample from.\n",
+    "* **Pros:**\n",
+    "    * **Better Exploration:** By defining a distribution, the agent naturally explores the state space through sampling.\n",
+    "    * **Optimal Convergence:** They can theoretically capture multimodal solutions and are less likely to get trapped in shallow local optima.\n",
+    "* **Cons:**\n",
+    "    * **Low Sample Efficiency:** Traditionally, they are On-Policy. Using them Off-Policy requires **Importance Sampling** ($\\frac{\\pi}{\\beta}$). In high-dimensional continuous action spaces, the variance of this ratio explodes (Curse of Dimensionality), making off-policy learning practically impossible, and we can only use trusted region to mitigate this.\n",
+    "\n",
+    "## Global Determinism vs. Local Stochasticity\n",
+    "The conceptual goal of Soft Actor-Critic is to achieve a specific behavioral balance:\n",
+    "\n",
+    "1.  **Global Determinism (Strategic Certainty):** The agent must have a strong commitment to the overall goal. If the objective is to reach a target, the policy should not be globally random, but it should aims for the best overall strategy to achieve the goal.\n",
+    "2.  **Local Stochasticity (Tactical Flexibility):** In the immediate execution of steps, the agent should maintain variance. This ensures that the agent learns multiple of valid actions rather than a single razor-thin path. If small perturbations occur at test time, the agent knows how to recover locally because it explored the area surrounding the optimal action.\n",
+    "\n",
+    "To achieve this balance, SAC shifts the objective from standard Reward Maximization to **Maximum Entropy Reinforcement Learning**.\n",
+    "\n",
+    "**Standard Objective:**\n",
+    "$$J(\\pi) = \\sum_t \\mathbb{E}_{(s_t, a_t) \\sim \\rho_\\pi} [r(s_t, a_t)]$$\n",
+    "\n",
+    "**SAC Objective:**\n",
+    "$$J(\\pi) = \\sum_t \\mathbb{E}_{(s_t, a_t) \\sim \\rho_\\pi} [r(s_t, a_t) + \\alpha \\mathcal{H}(\\pi(\\cdot|s_t))]$$\n",
+    "\n",
+    "$\\alpha$: the temperature, which determines the relative importance of the entropy term against the reward.\n",
+    "\n",
+    "Computing the exact entropy $\\mathcal{H}$ of a continuous action distribution requires to integrate over the entire action space.\n",
+    "$$H(\\pi(\\cdot|s_t)) = - \\int_{\\mathcal{A}} \\pi(a_t|s_t) \\log \\pi(a_t|s_t) \\, da_t$$\n",
+    "This computation is often untractable, so in practice, we approximate the entropy using the **Log-Likelihood of the sampled action** at a particular timestep $t$ in the trajectory:\n",
+    "$$\\text{Entropy Term} \\approx -\\log \\pi(a_t | s_t)$$\n",
+    "This is a Monte Carlo estimate derived from the single action sampled in the current batch.\n",
+    "\n",
+    "## Mechanism\n",
+    "The policy network in SAC outputs the parameters of a Gaussian distribution: a mean ($\\mu$) and a standard deviation ($\\sigma$).\n",
+    "\n",
+    "**The Variance ($\\sigma$) Enforces Exploration:** The entropy term acts as a regularizer that prevents the variance from collapsing to zero.\n",
+    "* **The Tug-of-War:** The reward signal encourages $\\sigma \\to 0$ (to greedily exploit the peak). The entropy signal encourages $\\sigma \\to \\infty$ (to flatten the distribution).\n",
+    "* **The Flattening Effect:** If the policy collapses to a single \"best\" action, the probability of other actions drops to near zero. Consequently, the \"surprise\" ($-\\log \\pi$) of those rare actions becomes massive. If the agent samples a rare action by chance, the high entropy bonus creates a large gradient update that increases the probability of that action, effectively widening the distribution again.\n",
+    "This ensures the agent is aware of and occationally performs other actions instead of committing to the single \"best\" action in case it fails in practice.\n",
+    "\n",
+    "By adding the entropy term, SAC achieves the goal of making the policy globally deterministic and locally stochastic:\n",
+    "1.  **The Mean ($\\mu$) $\\rightarrow$ Global Determinism**\n",
+    "    * Represents the **Intent**.\n",
+    "    * As training progresses, the Mean converges firmly on the optimal trajectory toward the goal, indicating the best action still has the highest likelihood of being taken, but not the only action that might be selected.\n",
+    "2.  **The Variance ($\\sigma$) $\\rightarrow$ Local Stochasticity**\n",
+    "    * Represents the **Tolerance**.\n",
+    "    * It defines the width of the safe corridor around the optimal path.\n",
+    "\n",
+    "A critical feature of SAC is how the policy is utilized differently during training versus inference.\n",
+    "* **During Training: Sample $a \\sim \\mathcal{N}(\\mu, \\sigma)$**\n",
+    "    * We use the stochasticity to build **robustness**. By forcing the agent to perform noisy actions, it learns to avoid sharp peaks (actions that are optimal but fragile because all actions around the best action point are destructive) and settle for flat plateaus (actions around the optimal action point are also close to optimal and safe).\n",
+    "    \n",
+    "* **During Testing: Set $a = \\mu$**\n",
+    "    * We discard the stochasticity and act deterministically.\n",
+    "    * **Crucial Distinction:** The deterministic $\\mu$ learned by SAC is different from the $\\mu$ learned by DDPG.\n",
+    "        * *DDPG Mean:* Likely sits on a \"sharp peak.\" High reward, but high risk of failure if conditions change slightly.\n",
+    "        * *SAC Mean:* Sits in the center of a \"flat plateau.\" It is inherently **safe** because it was trained under the constraint that deviations must not lead to failure.\n",
+    "\n",
+    "## Key Benefits\n",
+    "1.  **Robustness:** The entropy constraint forces the agent to learn policies that succeed even when execution is imperfect. The agent learns a safety margin around its actions.\n",
+    "2.  **Multimodality:** By maintaining a non-zero probability for suboptimal actions, the agent can capture multiple distinct solutions to a problem rather than collapsing on the first one it finds.\n",
+    "3.  **Smooth Optimization:** The stochasticity smoothes the optimization landscape. It turns jagged \"cliffs\" in the reward function into smooth slopes, allowing gradient descent to converge more reliably to global optima.\n",
+    "4. **High Sample Efficiency:** The SAC algorithm is off-policy since it updates the value function using single-step transitions $(s, a, r, s')$ collected by previous versions of the policy, rather than requiring the current policy to generate the data for every update. The off-policy nature allows the use of past experience through a replay buffer.\n",
+    "\n",
+    "Soft Actor-Critic successfully bridges the gap between sample efficiency and stability. It ensures the agent is **deterministic enough** (via the Mean) to achieve the goal quickly and effectively, but **stochastic enough** (via the Variance/Entropy) to provide the necessary workarounds and flexibility to handle local perturbations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "73d28fae",
    "metadata": {},
    "source": [
